--- a/src/app/pages/admin/license/tiles/license-tiles.component.html
+++ b/src/app/pages/admin/license/tiles/license-tiles.component.html
@@ -5,12 +5,7 @@
       <p>Manage license tiles with external links and descriptions</p>
     </div>
 
-    <div *ngIf="isLoading" class="loading-container">
-      <div class="spinner"></div>
-      <p>Loading license tiles...</p>
-    </div>
-
-    <div *ngIf="!isLoading" class="content-section">
+    <div class="content-section">
       <div class="card">
         <div class="card-header">
           <h2>License Tiles</h2>
